The bootstrap plugin version 4.5.0 is enabled via CDN.Updated the plugin jquery.min.js up to version 3.5.1 in the folder /assets/bootstrap/jquery.min.js. Removed font-awesome plugin from /assets/bootstrap/font-awesome folder/
This reverts commit ee4e18a6a305bc906064e9da28f51cf4689c12b6.

(cherry picked from commit 8142d45ab365675f35393943ea0550f72f9bd08a)

--- a/adm/css/style.css
+++ b/adm/css/style.css
@@ -1,24 +1,13 @@
 /**
-* stule.css
+* style.css
 * 
 * Стили для панели администратора
 * 
 * Created by Marat Shalmanov <1203Marat@gmail.com>
-* Copyright (c) 2016 - 2018
+* Copyright (c) 2016 - 2020
 **/
 
 /* Форма входа */
-.container {
-	margin-right: auto;
-	margin-left: auto;
-	max-width: 460px;	
-}
-
-.row {
-	margin-top: 100px;
-	margin-bottom: 100px;
-}
-
 .navbar{
 	min-height: 0;
 	border-radius: 0px;
